--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body id="loadforms" onload="dontDisplayforms();">
   
     <img id="image1" src= "./images/vtdi.png" width="150px" height="140px" alt="Vocational Training Development Institute" >
-
+  <p class="heading">Dynamic Website & Application</p>
     <div class="dropdown">
 
         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" width="70px">Module 2
@@ -28,7 +28,7 @@
 
             <ul class="dropdown-menu" id="select" >
 
-                <li id="quest1"><a tabindex="-1" href="#" onclick="formName('Question1A');">Question 1A</a></li>
+                <li id="quest1" ><a tabindex="-1" href="#" onclick="formName('Question1A');">Question 1A</a></li>
 
                 <li id="quest2"><a tabindex="-1" href="#"  onclick="formName('Question1B');">Question 1B</a></li>              
 
@@ -41,7 +41,7 @@
      </div>
      <form id="Question1A">
 
-        <table border=1 align=center> 
+        <table border=1 align="center" width="70%"> 
             <thead>
                 <td align="left" colspan="2">
                     <b>(Question 1A) </b>Parsing and displaying data</i></b>
@@ -79,7 +79,7 @@
 
     <form id="Question1B">
 
-        <table border=1 align=center>   
+        <table border=1 align="center" width="70%">  
             <thead>
                 <td align="left" colspan="2">
                     <b>(Question 1B)</b> Manipulating Data</i></b>
@@ -135,7 +135,7 @@
     
     <form id="Question1C">
 
-        <table border=1 align=center> 
+        <table border=1 align="center" width="70%"> 
             <thead>
                 <td align="left" colspan="2">
                     <b>(Question 1C) </b>Working with LocalStorage</i></b>
